--- a/express-inhaal/views/search.ejs
+++ b/express-inhaal/views/search.ejs
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Express Inhaal examen</title>
+<title>Search</title>
 </head>
 <body>
-
 	<ul class="inhaals">
 		<% for(var i=0; i < inhaal.length; i++) {%>
 			<li class="inhaal">
@@ -18,12 +17,9 @@
 	</lu>
 
 
-	<form action="/add" method="POST">
+	<form action="/search" method="POST">
 		<input type="text" placeholder="naam" name="naam">
-		<input type="text" placeholder="examen" name="examen">
-		<input type="text" placeholder="reden" name="reden">
-		<input type="text" placeholder="datum" name="datum">
-		<button type="submit">Submit</input>
+		<button type="submit">Search</input>
 	</form>
 </body>
 </html>
